fixed css issues on mobile and made leaderboard return more people

--- a/chessschedule/static/main.css
+++ b/chessschedule/static/main.css
@@ -48,12 +48,12 @@ html, body {
     padding: 0.4em;
     margin-bottom: 1.5em;
     border-radius: 10px;
-    font-size: 0.8em;
+    font-size: 1.5em;
     transition: ease 0.3s; 
 }
 
 .is-player-pair {
-  font-size: 1.3em;
+  font-size: 2em;
   background-color: hsl(153, 53%, 53%); 
 }
 
@@ -61,11 +61,8 @@ html, body {
   .pair-tile {
     display: block;
     text-align: center;
-    font-size: 0.5em;
+    font-size: 1.6em;
     padding: 0.2em;
-  }
-  .is-player-pair {
-    font-size: 0.8em;
   }
 }
 
